# game-mcp-poc

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  block_taunt.json  corner_strategy_taunt.json  critical_block_taunt.json  demonstrate_playwright.py  draw_taunt.json  response_taunt.json  screenshot_ui.py  taunt_message.json  taunt_request.json  test-mcp-manual.sh  test_mcp_thinking.py  test_thinking_indicator.py  test_ui_firefox.py
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: routes.rs  server.rs
backend/src/db/: repository.rs  schema.rs
backend/src/game/: manager.rs
backend/src/mcp/: server.rs  tools.rs
docs/: mcp-setup-and-testing.md  online-plan.md  resume-gemini.md  status.md
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: lib.rs
frontend/src/api/: client.rs  mod.rs
scripts/: README.md  ai_agent.py  ai_agent_simple.py  build.sh  dev.sh  generate-build-info.sh  play_with_agent.sh  run_ai_agent.sh  serve-1461.sh  serve.sh  start-server.sh  test_mcp_agent.sh
shared/src/: lib.rs
wiki/: Architecture-Overview.md  Backend-Architecture.md  Data-Flow.md  Frontend-Architecture.md  Home.md  MCP-Integration.md  README.md  _Sidebar.md
